added some instructions

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
 
   <body>
     <div id="main" class="main ui">
-      <h1 class="ui dividing centered header">☁️DreamHub</h1>
+      <h1 class="ui dividing centered header">☁️ DreamHub</h1>
+      <h3 class="ui centered header">Keep track of all your dreams here, read the dreams of others, and keep the conversation going in waking life.</h3>
+      <h3 class="ui centered header">If you thought a dream was interesting click Float! Or Descend a dream if it didn't seem worth sharing.</h3>
       <div id="content"></div>
     </div>
     <script type="text/babel" src="./js/client.js"></script>
