edited header look

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
 
   <body>
     <div id="main" class="main ui">
-      <h1 class="ui dividing centered header">☁️ DreamHub</h1>
-      <h3 class="ui centered header">Keep track of all your dreams here, read the dreams of others, and keep the conversation going in waking life.</h3>
+    <div class="ui dividing centered dreamhub">
+
+        <h1 class="header-text">☁️ DreamHub</h1>
+        <h3 class="header-text">Keep track of all your dreams here, read the dreams of others, and keep the conversation going in waking life.</h3>
+    </div>
       <div id="content"></div>
     </div>
     <script type="text/babel" src="./js/client.js"></script>
