--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>☁️DreamHub</title>
     <link rel="stylesheet" href="./semantic/dist/semantic.css" />
     <link rel="stylesheet" href="style.css" />
